Fix cart 'not showing' sometimes

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -120,7 +120,7 @@ body.albums {
   }
 
   .cart-flash {
-    position: absolute;
+    position: fixed;
     z-index: 100000;
     width: 100%;
     text-align: center;
